actualizar gemfile para heroku

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -76,9 +76,9 @@
   </div>
     </section>
 
-    <section class="seccion2" data-type="parallax_section" data-speed="10">
+    <section  class="center" data-type="parallax_section " data-speed="10">
   			<article>
-
+<img class="z-depth-5 responsive-img center" src="<%= asset_path 'Fondo1.jpg' %>">
         </article>
   		</section>
 
@@ -120,11 +120,11 @@
         </div>
       </section>
 
-      <section class="seccion3" data-type="parallax_section" data-speed="10">
-          <article>
-
+      <section  class="center" data-type="parallax_section " data-speed="10">
+    			<article>
+  <img class="z-depth-5 responsive-img center" src="<%= asset_path 'cafe.jpg' %>">
           </article>
-        </section>
+    		</section>
         <!--   Icon Section   -->
 
         <div class="row" >
@@ -164,11 +164,11 @@
       </div>
 
 
-      <section class="seccion4" data-type="parallax_section" data-speed="10">
-          <article>
-
+      <section  class="center" data-type="parallax_section " data-speed="10">
+    			<article>
+  <img class="z-depth-5 responsive-img center" src="<%= asset_path '6.jpg' %>">
           </article>
-        </section>
+    		</section>
         <!--   Icon Section   -->
 
         <div class="row" >
@@ -207,11 +207,12 @@
         <br><br>
         </div>
 
-        <section class="seccion5" data-type="parallax_section" data-speed="10">
-            <article>
-
+        <section  class="center" data-type="parallax_section " data-speed="10">
+      			<article>
+    <img class="z-depth-5 responsive-img center" src="<%= asset_path '1.jpg' %>">
             </article>
-          </section>
+      		</section>
+
           <img class="responsive-img"src="<%= asset_path 'divider.png' %>">
           <h1 class="header center teal-text text-lighten-2">Gracias por todos los momentos bellos que paso junto a ti.</h1>
           <img class="responsive-img"src="<%= asset_path 'divider.png' %>">
