--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,11 +4,12 @@
 <meta charset="utf-8">
     <title>parallax</title>
 
-    <nav class="white" role="navigation">
+    <nav class="white #263238 blue-grey darken-4
+ z-depth-5" role="navigation">
        <div class="nav-wrapper container">
-         <a id="logo-container" href="#" class="brand-logo grey-text text-darken-4">Bienvenida mi amor </a>
+         <a id="logo-container" href="#" class="brand-logo white-text text-white-4">Bienvenida mi amor </a>
          <ul class="right hide-on-med-and-down">
-           <li><a href="#" class="grey-text text-darken-4">1 año y vamos por más</a></li>
+           <li><a href="#" class="white-text text-white-4">1 año y vamos por más</a></li>
          </ul>
 
          <ul id="nav-mobile" class="side-nav">
